{
    "name": "UserInput",
    "maps": [
        {
            "name": "CharAction",
            "id": "3e25b07e-430e-49c3-8419-b10ed7a35ab3",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "595f3166-015c-4aef-9b8e-c4092407bef9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Hold",
                    "type": "PassThrough",
                    "id": "b372810b-5ee8-46a5-8545-109327f921ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a590e88-ad79-4692-85fa-8a4399570fcb",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "632f5d12-29ff-4b75-acfc-59b8853a6181",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13cbd21c-6111-42dc-80f7-0aa9eef5d2ad",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f3d93fa-865b-4562-b085-abc58f4630f3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "5a410ea8-fb55-4f39-941d-604e38279bb6",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "2cae8e21-7ebf-4c5e-a5f1-10de5d76f85f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Dpad",
                    "id": "9d4c9ebd-751c-4767-a157-7f99c9929acb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "37d1f05f-6bdb-482a-bc5d-1b20d826699c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4e50864f-3cff-4cde-aa42-c83d4a7e06af",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "56850f81-77c6-43aa-8b87-f93cec3cbf6a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "35179f1a-4a62-427a-90ee-6edca9beef06",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c728026b-8565-4c25-bba1-afb97709a947",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NotInUse",
            "id": "42d44bae-1405-4aec-8418-32a4d9efb517",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "ab1ecac5-bbe1-4225-ae32-c5cbab64ef58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "d93d08da-7e7f-4441-b39d-baf9ad1afe8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "87bfd08e-5aed-48b7-8c0e-689f82fe2856",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f95d97cf-c3b0-47ff-b1e5-232b52a7f4c2",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}